# ticketier

./: .env.sample  .gitignore  LICENSE  README.md  perms.json  pyproject.toml
.github/: copilot-instructions.md
src/app/: main.py
src/app/pages/: 0_📘_Build_Knowledge_base.py  1_🔎_AISearch_RAG.py  2_🖼️_Vision_RAG.py  3_🧱_Databricks_SQL.py
src/assistants/: correlation_agent.py
src/core/: README.md  __init__.py  azure_search_helper.py  chat_history_helper.py  openai_manager.py  pg_helper.py
src/history/: README.md
src/notebooks/: foundry-iq.ipynb  foundry_agent_with_aisearch.ipynb  load_data_v2.ipynb  load_tickets_data.ipynb  pg-foundry-agent-maf.ipynb  pg-foundry-agent.ipynb  responses_api_test.ipynb
src/scripts/: azure_search_example.py  test_databricks_vector_index.py
src/scripts/_vector_probe_out/: manufacturing_bronze_warranty_claims_index__describe.json  manufacturing_bronze_warranty_claims_index__scan.json  manufacturing_bronze_warranty_claims_index__similarity_search.json
